Se suben cambios reto tecnico

--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -1,8 +1,8 @@
 serenity {
-    take.screenshots = FOR_FAILURES
+    take.screenshots = after_each_step
 }
 
-headless.mode = true
+headless.mode = false
 webdriver {
   driver = firefox
   capabilities {
