--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,7 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    systemProperty "cucumberOptions", System.getProperty("cucumber.options")
 }
 
 gradle.startParameter.continueOnFailure = true
