se actualizan nombres de algunas variables y se agrega example en la feature

--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -9,7 +9,7 @@ webdriver {
     browserName = "firefox"
     acceptInsecureCerts = true
     "moz:firefoxOptions" {
-      args = ["--width=1000", "--height=800", "--private"]
+      args = ["-width=2560", "-height=1440", "--private"]
     }
   }
 }
